add webSecurity class to resolve 403 response in h2 console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #server
 server.port=8086
 #h2
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-spring.datasource.url=jdbc:h2:file:~/userRegistration-db
+
+spring.datasource.url=jdbc:h2:mem:registration
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
